[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=78.0.2"]

[project]
authors = [
  {name = "Matias Aguirre", email = "matiasaguirre@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Internet",
  "Intended Audience :: Developers",
  "Environment :: Web Environment",
  "Programming Language :: Python",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "six",
  "mongoengine",
  "social-auth-core >= 1.0.0"
]
description = "Python Social Authentication, Mongoengine storage."
dynamic = ["version"]
keywords = [
  "mongoengine",
  "social",
  "auth"
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
name = "social-auth-storage-mongoengine"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/python-social-auth/social-storage-mongoengine"

[tool.setuptools]
include-package-data = false
packages = [
  "social_mongoengine"
]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "social_mongoengine.__version__"}
